# circuit-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
circuit_agent/: __init__.py  agent.py  cli.py  config.py  context.py  errors.py  proxy.py  security.py  streaming.py  tools.py  ui.py
circuit_agent/mcp/: __init__.py  client.py  config.py  converter.py  transport.py
circuit_agent/mcp/servers/: __init__.py  github.py
circuit_agent/memory/: __init__.py  compaction.py  session.py
circuit_agent/service/: __init__.py  agent_service.py  events.py  state.py
circuit_agent/tools/: __init__.py  executor.py  file_tools.py  git_tools.py  github_tools.py  web_tools.py
install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  web-install.ps1  web-install.sh
tests/: test_cli.py
